--- a/acces/style.css
+++ b/acces/style.css
@@ -1,6 +1,12 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+
+    text-rendering: optimizeSpeed;
     line-height: 1.6;
     color: #fff;
     margin: 0;
@@ -79,7 +85,13 @@ h6 {
     align-items: center;
 }
 
-.header_logo_lox {}
+.header_logo1 {
+    margin: 0 auto;
+    width: 90px;
+    height: 90px;
+    border-radius: 100px;
+    box-shadow: 4px 3px 10px 3px rgba(54, 64, 92, 0.74);
+}
 
 .nav {
     font-size: 20px;
@@ -138,5 +150,31 @@ h6 {
     color: #fff;
 
     opacity: 1;
+
+}
+
+.section {
+    display: inline-flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background: url("../acces/img/1.png") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    transform: scale(1, -1);
+
+
+
+
+}
+
+
+.Mem_item {
+    transform: scale(1, -1);
+    margin: 0 auto 0;
+    width: 200px;
+    height: 200px;
+
 
 }
