--- a/acces/style.css
+++ b/acces/style.css
@@ -56,7 +56,7 @@ h6 {
     font-size: 159px;
     font-weight: 700;
     text-transform: uppercase;
-
+    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.85);
     line-height: 1;
 }
 
@@ -67,6 +67,7 @@ h6 {
     height: 3px;
     margin: 25px auto 45px;
     background-color: #fff;
+    
 }
 
 .header {
@@ -83,6 +84,7 @@ h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .header_logo1 {
@@ -90,12 +92,13 @@ h6 {
     width: 90px;
     height: 90px;
     border-radius: 100px;
-    box-shadow: 4px 3px 10px 3px rgba(54, 64, 92, 0.74);
+    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 1);
 }
 
 .nav {
     font-size: 20px;
     text-transform: uppercase;
+    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.85);
 
 }
 
@@ -143,6 +146,7 @@ h6 {
     text-decoration: none;
     transition: background .1s linear, color .1s linear;
     opacity: 0.5;
+    
 }
 
 .btn:hover {
@@ -150,10 +154,10 @@ h6 {
     color: #fff;
 
     opacity: 1;
+    
 
 }
-
-.section {
+.section1{
     display: inline-flex;
     flex-direction: column-reverse;
     justify-content: center;
@@ -163,18 +167,87 @@ h6 {
     -webkit-background-size: cover;
     background-size: cover;
     transform: scale(1, -1);
-
-
-
-
 }
-
-
-.Mem_item {
+.ORIO1{
+    text-align: center;
+    text-decoration: none;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
     transform: scale(1, -1);
-    margin: 0 auto 0;
-    width: 200px;
-    height: 200px;
-
-
 }
+
+
+
+.Mem_item{
+    display: inline-flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    margin:0 auto;
+}
+.header_mems1 {
+    
+    width: 500px;
+    height: 600px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.85);
+    
+    transform: scale(1, -1);
+    
+}
+
+.section2 {
+    display: inline-flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background: url("../acces/img/1.png") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    transform: scale(1, 1);
+}
+.About{
+    width: 100%;
+    max-width: 1200px;
+    
+    
+    margin: 0 auto;
+    text-align: center;
+    background: rgba(12, 6, 47, 0.5);
+    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
+}
+.About_Mems1{
+    text-align: center;
+    text-decoration: none;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+   
+    
+    
+}
+.About_Mems2{
+   margin: 0px 10px 0 10px;
+    text-align: justify;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    
+    line-height: 2;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
