--- a/acces/style.css
+++ b/acces/style.css
@@ -28,12 +28,20 @@ h6 {
     margin: 0;
 }
 
+p {
+    margin: 0 0 10px;
+}
+
 .container {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
+
+
+/*Intro*/
 .intro {
     display: inline-flex;
     flex-direction: column-reverse;
@@ -43,6 +51,7 @@ h6 {
     background: url("../acces/img/1.png") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
+
 }
 
 .introinner {
@@ -70,6 +79,8 @@ h6 {
 
 }
 
+
+/*Header*/
 .header {
     padding-top: 30px;
     width: 100%;
@@ -95,6 +106,8 @@ h6 {
     box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 1);
 }
 
+
+/*Navigation*/
 .nav {
     font-size: 20px;
     text-transform: uppercase;
@@ -134,6 +147,8 @@ h6 {
     opacity: 1;
 }
 
+
+/*Button*/
 .btn {
     display: inline-block;
     vertical-align: top;
@@ -155,240 +170,142 @@ h6 {
 
     opacity: 1;
 
-
 }
 
-.section1 {
-    display: inline-flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background: url("../acces/img/1.png") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    transform: scale(1, -1);
+/*Features
+=============*/
+.features {
+    display: flex;
+    margin: 100px 0;
+    flex-wrap: wrap;
 }
 
-.ORIO1 {
+.features__item {
+    width: 33.33333%;
+    padding: 0 40px;
+    margin: 25px 0;
+    max-width: 1200px;
     text-align: center;
-    text-decoration: none;
-    font-size: 40px;
+
+}
+
+.features_icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+
+
+}
+
+.features__title {
+    font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
-    transform: scale(1, -1);
+    margin-bottom: 15px;
+    color: #000;
+
 }
 
+.features__text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #000;
 
+}
 
-.Mem_item {
-    display: inline-flex;
-    flex-direction: column-reverse;
-    justify-content: center;
+/*Mems
+=================*/
+
+.mems {
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 100px;
 }
 
-.header_mems1 {
+.mems__item {
 
-    width: 500px;
-    height: 600px;
+    width: 20%;
+}
+
+.mems__img {
+    width: 400px;
+    height: 500px;
+    transition: .5s;
+}
+
+.mems__img:hover {
+    transform: scale(1.3);
     border-radius: 10px;
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.85);
-
-    transform: scale(1, -1);
-
 }
 
-.section2 {
-    display: inline-flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background: url("../acces/img/1.png") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    transform: scale(1, 1);
+
+
+/*  Team 
+================*/
+.team {
+    margin: 100px 0;
+    
 }
 
-.About {
-    width: 100%;
-    max-width: 1200px;
-
-
-    margin: 0 auto;
-    text-align: center;
-    background: rgba(12, 6, 47, 0.5);
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
+.team__inner {
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 
-.About_Mems1 {
-    text-align: center;
-    text-decoration: none;
-    font-size: 40px;
+.team__item {
+    width: 25%;
+    padding: 0 15px;
+    
+    
+}
+.team__img {
+    display: block;
+    max-width: 100%;
+    width: 250px;
+    height: 250px;
+    margin-bottom: 20px;   
+    
+    border-radius: 10px;
+}
+.team__name {
+    margin-bottom: 20px;
+    font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
-
-
-
+    
+    color: #000;
+    
 }
-
-.About_Mems2 {
-    margin: 0px 10px 0 10px;
-    text-align: justify;
-    text-decoration: none;
+.team__prof {
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 400;
     text-transform: uppercase;
-
-    line-height: 2;
-
-}
-
-.section3 {
-    display: inline-flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background: url("../acces/img/1.png") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    transform: scale(1, -1);
-}
-
-.Service {
-    width: 100%;
-    max-width: 1200px;
-    transform: scale(1, -1);
-
-    margin: 0 auto;
-    text-align: center;
-    background: rgba(12, 6, 47, 0.5);
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
-}
-
-.Service_Mems1 {
-    text-align: center;
-    text-decoration: none;
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
-    transform: scale(1, 1);
-
-
-
-}
-
-.Service_Mems2 {
-    margin: 0px 10px 0 10px;
-    text-align: justify;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    
-    line-height: 2;
-
-}
-.section4 {
-    display: inline-flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background: url("../acces/img/1.png") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    transform: scale(1, 1);
-}
-.Work{
-    
-    
-    
-    margin: 0 auto;
-    text-align: center;
+    margin-bottom: 15px;
+    color: #000;
     
 }
-.Work_Mems1{
-    text-align: center;
-    text-decoration: none;
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
-    box-shadow: 0px -40px 40px 20px rgba(12, 6, 47, 0.8);
+
+.team__social {
    
     
-    
 }
-.Work_Mems2{
-    margin: 0px 10px 0 10px;
-
-    
-}
-.Work_header_mems1{
-    margin: 0 auto;
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
-}
-.Work_header_mems2{
-     width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
-    
-}
-.Work_header_mems3{
-     width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
-    
-}
-
-.section5 {
+.team__icon {
     display: inline-flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background: url("../acces/img/1.png") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    transform: scale(1, -1);
+    margin: 0 20px;
+    max-width: 25px;
+    
+    height: auto;
+ transition: .3s;
 }
 
-.Contact {
-    width: 100%;
-    max-width: 1200px;
-    transform: scale(1, -1);
-
-
-    margin: 0 auto;
-    text-align: center;
-    background: rgba(12, 6, 47, 0.5);
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.8);
-}
-
-.Contact_Mems1 {
-    text-align: center;
-    text-decoration: none;
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
+.team__icon:hover {
+    transform: scale(1.3);
+    
 
 
 
-}
 
-.Contact_Mems2 {
-    margin: 0px 10px 0 10px;
-    text-align: justify;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
 
-    line-height: 2;
+
