--- a/acces/style.css
+++ b/acces/style.css
@@ -19,18 +19,7 @@ body {
     box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
 
-p {
-    margin: 0 0 10px;
-}
 
 .container {
     width: 100%;
@@ -189,7 +178,7 @@ p {
 
 }
 
-.features_icon {
+.features__icon {
     width: 100px;
     height: 100px;
     margin-bottom: 20px;
@@ -217,7 +206,10 @@ p {
 =================*/
 
 .mems {
-    margin: 0 auto;
+    width: 100%;
+    margin: 0;
+    padding-left: 20px;
+    padding-right: 20px;
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 100px;
@@ -229,6 +221,7 @@ p {
 }
 
 .mems__img {
+    margin: 0 auto;
     width: 400px;
     height: 500px;
     transition: .5s;
@@ -272,6 +265,7 @@ p {
 }
 
 .team__name {
+    padding-left: 10px;
     margin-bottom: 20px;
     font-size: 20px;
     font-weight: 700;
@@ -284,6 +278,7 @@ p {
 .team__prof {
     font-size: 14px;
     font-weight: 400;
+    padding-left: 10px;
     text-transform: uppercase;
     margin-bottom: 15px;
     color: #000;
@@ -294,9 +289,10 @@ p {
 
 .team__icon {
     display: inline-flex;
+    
     margin: 0 20px;
     max-width: 25px;
-
+    
     height: auto;
     transition: .3s;
 }
