--- a/acces/style.css
+++ b/acces/style.css
@@ -10,6 +10,10 @@ body {
     line-height: 1.6;
     color: #fff;
     margin: 0;
+    width: 100%;
+    height: 100vh;
+    background: url("../acces/img/1.jpg") center no-repeat;
+    background-size: cover;
 
 }
 
@@ -37,9 +41,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background: url("../acces/img/1.png") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
+    
 
 }
 
@@ -96,11 +98,12 @@ body {
 }
 
 
-/*Navigation*/
+/*Navigation
+================*/
 .nav {
     font-size: 20px;
     text-transform: uppercase;
-    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 0.85);
+    box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 1);
 
 }
 
@@ -108,36 +111,25 @@ body {
     display: inline-block;
     vertical-align: top;
     margin: 10px;
-    color: #fff;
+    color: #fff;    
     text-decoration: none;
-    transition: color .2s linear;
-    position: relative;
-    top: 100%;
-    left: 0;
-    z-index: 1;
+    transition: color .1s linear;
+    opacity: 0.8;
 }
 
-.nav_link:after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 3px;
-    opacity: 0;
-    background-color: blueviolet;
-    position: absolute;
-    transition: opacity 0.2s linear;
-}
+
+
 
 .nav_link:hover {
-    color: blueviolet;
-}
-
-.nav_link:hover:after {
+    color: #fff;
     opacity: 1;
 }
 
 
-/*Button*/
+
+
+/*Button
+=====================*/
 .btn {
     display: inline-block;
     vertical-align: top;
@@ -205,31 +197,39 @@ body {
 /*Mems
 =================*/
 
+
 .mems {
-    width: 100%;
-    margin: 0;
-    padding-left: 20px;
-    padding-right: 20px;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    margin: 0;
     padding-bottom: 100px;
 }
 
 .mems__item {
 
     width: 20%;
+    
+
 }
 
 .mems__img {
-    margin: 0 auto;
-    width: 400px;
-    height: 500px;
+    margin: 0;
+    width: 100%;
+    max-width: 450px;
+    height: 100%;
+    max-height: 500px;
     transition: .5s;
+    
 }
 
 .mems__img:hover {
     transform: scale(1.3);
+    
+    
+    
     border-radius: 10px;
+    box-shadow: 0px 0px 30px 8px rgba(12, 6, 47, 0.35);
 }
 
 
@@ -289,13 +289,15 @@ body {
 
 .team__icon {
     display: inline-flex;
-    
+
     margin: 0 20px;
     max-width: 25px;
     
+
     height: auto;
     transition: .3s;
 }
 
 .team__icon:hover {
     transform: scale(1.3);
+    
