--- a/acces/style.css
+++ b/acces/style.css
@@ -41,7 +41,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    
+
 
 }
 
@@ -111,7 +111,7 @@ body {
     display: inline-block;
     vertical-align: top;
     margin: 10px;
-    color: #fff;    
+    color: #fff;
     text-decoration: none;
     transition: color .1s linear;
     opacity: 0.8;
@@ -209,7 +209,7 @@ body {
 .mems__item {
 
     width: 20%;
-    
+
 
 }
 
@@ -220,14 +220,14 @@ body {
     height: 100%;
     max-height: 500px;
     transition: .5s;
-    
+
 }
 
 .mems__img:hover {
     transform: scale(1.3);
-    
-    
-    
+
+
+
     border-radius: 10px;
     box-shadow: 0px 0px 30px 8px rgba(12, 6, 47, 0.35);
 }
@@ -292,7 +292,7 @@ body {
 
     margin: 0 20px;
     max-width: 25px;
-    
+
 
     height: auto;
     transition: .3s;
@@ -300,4 +300,38 @@ body {
 
 .team__icon:hover {
     transform: scale(1.3);
+
+}
+    /*  Contact 
+================*/
+    
+    
+.contact {
+    margin: 100px 0;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.contact__item {
+    display: inline-flex;
+    flex-wrap: wrap;
+  
+}
+.contact__icon {
+    display: inline-flex;
+
+    margin: 0 100px;
+    max-width: 50px;
+
+
+    height: auto;
+    
+   transition: .3s;
+}
+
+.contact__icon:hover {
+    transform: scale(1.3);
+}
+    
     
