--- a/acces/style.css
+++ b/acces/style.css
@@ -5,7 +5,6 @@ html {
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-
     text-rendering: optimizeSpeed;
     line-height: 1.6;
     color: #fff;
@@ -41,7 +40,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    
+
 
 
 }
@@ -97,7 +96,7 @@ body {
 ================*/
 .nav {
     font-size: 20px;
-    
+
     text-transform: uppercase;
     box-shadow: 0px 0px 30px 20px rgba(12, 6, 47, 1);
     border-radius: 5px;
@@ -145,9 +144,7 @@ body {
 }
 
 .btn:hover {
-
     color: #fff;
-
     opacity: 1;
 
 }
@@ -155,9 +152,11 @@ body {
 /*Features
 =============*/
 .features {
+
     display: flex;
-    margin: 100px 0;
     flex-wrap: wrap;
+    margin: 100px 0;
+
 }
 
 .features__item {
@@ -198,35 +197,31 @@ body {
 
 
 .mems {
+
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    max-width: 1600px;
     margin: 0;
     padding-bottom: 100px;
 }
 
 .mems__item {
-
     width: 20%;
-
-
+    
 }
 
 .mems__img {
-    margin: 0;
-    width: 100%;
+    width: 100vw;
     max-width: 450px;
-    height: 100%;
+    height: 100vh;
     max-height: 500px;
-    transition: .5s;
+    transition: .4s;
 
 }
 
 .mems__img:hover {
     transform: scale(1.3);
-
-
-
     border-radius: 10px;
     box-shadow: 0px 0px 30px 8px rgba(12, 6, 47, 0.35);
 }
@@ -241,12 +236,12 @@ body {
 }
 
 .team__inner {
-    display: flex;
-    flex-wrap: wrap;
+    display: inline-flex;
 
 }
 
 .team__item {
+
     width: 25%;
     padding: 0 15px;
 
@@ -254,8 +249,8 @@ body {
 }
 
 .team__img {
-    display: block;
-    max-width: 100%;
+
+
     width: 250px;
     height: 250px;
     margin-bottom: 20px;
@@ -269,7 +264,6 @@ body {
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
-
     color: #000;
 
 }
@@ -288,11 +282,8 @@ body {
 
 .team__icon {
     display: inline-flex;
-
     margin: 0 20px;
     max-width: 25px;
-
-
     height: auto;
     transition: .3s;
 }
@@ -301,10 +292,11 @@ body {
     transform: scale(1.3);
 
 }
-    /*  Contact 
+
+/*  Contact 
 ================*/
-    
-    
+
+
 .contact {
     margin: 100px 0;
     text-align: center;
@@ -315,22 +307,17 @@ body {
 .contact__item {
     display: inline-flex;
     flex-wrap: wrap;
-  
+
 }
+
 .contact__icon {
     display: inline-flex;
-
     margin: 0 100px;
     max-width: 50px;
-
-
     height: auto;
-    
-   transition: .3s;
+    transition: .3s;
 }
 
 .contact__icon:hover {
     transform: scale(1.3);
 }
-    
-    
